# snm

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  a.txt
.archlinux/: PKGBUILD
.aur/: PKGBUILD
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cicd.yml  cross_compile.yml  pull_request.yml
scripts/: install.sh
src/: alias.rs  archive.rs  cli.rs  config.rs  directory.rs  downloader.rs  echo.rs  errors.rs  fetcher.rs  main.rs  progress_bar.rs  symlink.rs  sysinfo.rs  url.rs  versions.rs  xtract.rs
src/cli/: cli.rs  config.rs  mod.rs  subcommand.rs
src/cmd/: alias.rs  command.rs  completions.rs  env.rs  exec.rs  install.rs  latest.rs  ls.rs  ls_remote.rs  lts.rs  mod.rs  prune.rs  remove.rs  unalias.rs  uninstall.rs  use.rs  which.rs
src/commands/: alias.rs  completions.rs  env.rs  exec.rs  install.rs  latest.rs  ls.rs  ls_remote.rs  lts.rs  mod.rs  prune.rs  purge.rs  unalias.rs  uninstall.rs  use.rs  which.rs
src/lib/: alias2.rs  downloader.rs  downloader2.rs  fetcher.rs  fetcher2.rs  linker.rs  loader.rs  mod.rs  types.rs
src/lib/shell/: bash.rs  fish.rs  mod.rs  pwsh.rs  zsh.rs
src/lib/version/: dist_version.rs  mod.rs  user_version.rs
src/shell/: bash.rs  common.rs  fish.rs  mod.rs  pwsh.rs  shell.rs  zsh.rs
src/version/: common.rs  mod.rs  node_version.rs  version.rs
tests/: dist_version.rs  downloader.rs  fetcher.rs  linker.rs  user_version.rs  yo.rs
