[package]
name = "snm"
version = "0.5.0"
description = "Smol and Stupid Node Manager"
authors = ["Vikas Raj <sudo@vikasraj.dev>"]
edition = "2018"
homepage = "https://github.com/numToStr/snm/"
repository = "https://github.com/numToStr/snm/"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
colored = "2.0.0"
dirs-next = "2.0.0"
indicatif = "0.16.0"
indoc = "1.0.3"
semver = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tar = "0.4.33"
ureq = { version = "2.1.1", features = ["json"] }
url = "2.2.2"
xz2 = "0.1.6"
zip = "0.5.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
