[package]
name = "snm"
version = "0.8.0"
description = "Smol and simple node version manager"
authors = ["Vikas Raj <sudo@vikasraj.dev>"]
edition = "2018"
homepage = "https://github.com/numToStr/snm/"
repository = "https://github.com/numToStr/snm/"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "snm_core"
path = "src/lib/mod.rs"

[[bin]]
name = "snm"

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.4"
console = "0.14.1"
dirs-next = "2.0.0"
indicatif = "0.16.2"
indoc = "1.0.3"
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tempfile = "3.2.0"
ureq = { version = "2.2.0", features = ["json"] }
url = "2.2.2"

[dev-dependencies]
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
xz2 = "0.1.6"
tar = "0.4.37"

[target.'cfg(windows)'.dependencies]
zip = "0.5.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
